# hawser

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  plugins-index.json
.claude/rules/: rust.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  demo.yml  docker.yml  pages.yml  release.yml
crates/haw-artifact/: Cargo.toml
crates/haw-artifact/src/: main.rs
crates/haw-aspice/: Cargo.toml
crates/haw-aspice/src/: cli.rs  context.rs  main.rs  trace.rs
crates/haw-compliance/src/: cli.rs  context.rs  main.rs  report.rs  sbom.rs
crates/haw-core/: Cargo.toml
crates/haw-core/src/: lib.rs
crates/haw-core/src/git/: mod.rs
crates/haw-core/src/hooks/: mod.rs
crates/haw-core/src/manifest/: mod.rs  model.rs
crates/haw-core/src/manifest/import/: mod.rs
crates/haw-core/src/plugin/: mod.rs
crates/haw-core/src/snapshot/: mod.rs
crates/haw-core/src/workspace/: mod.rs
crates/haw-core/tests/: lock_and_change.rs  manifest.rs
crates/haw-forge/: Cargo.toml
crates/haw-forge/src/: bitbucket.rs  github.rs  gitlab.rs  http.rs  lib.rs  orchestrate.rs
crates/haw-forge/tests/: live_smoke.rs  orchestrate.rs
crates/haw-git/: Cargo.toml
crates/haw-git-gate/: Cargo.toml
crates/haw-git-gate/src/: cli.rs  context.rs  main.rs  report.rs  scan.rs
crates/haw-git/src/: lib.rs
crates/haw-git/tests/: shellgit.rs
crates/haw-jira/: Cargo.toml
crates/haw-jira/src/: cli.rs  context.rs  jira.rs  main.rs
crates/haw-merge/: Cargo.toml
crates/haw-merge/src/: lib.rs
crates/haw-merge/tests/: merge.rs
crates/haw-misra/: Cargo.toml
crates/haw-misra/src/: cli.rs  context.rs  main.rs  report.rs  scan.rs
crates/haw-plugin/src/: lib.rs
crates/haw-tui/: Cargo.toml
crates/haw-tui/src/: config.rs  lib.rs
crates/haw-tui/tests/: render.rs
crates/hawser/: Cargo.toml
crates/hawser/src/: commands.rs  controller.rs  main.rs
crates/hawser/src/commands/: change.rs  merge.rs  publish.rs  run.rs  sync.rs
crates/hawser/src/controller/: cli.rs  demo.rs
crates/hawser/src/ui/: palette.rs
crates/hawser/tests/: golden.rs
crates/keel-cli/: Cargo.toml
crates/keel-cli/src/: main.rs
crates/keel-core/: Cargo.toml
crates/keel-core/src/: lib.rs
crates/keel-core/src/audit/: mod.rs
crates/keel-core/src/change/: mod.rs
crates/keel-core/src/git/: mod.rs
crates/keel-core/src/hooks/: mod.rs
crates/keel-core/src/lock/: mod.rs
crates/keel-core/src/manifest/: mod.rs  model.rs  toml_loader.rs
crates/keel-core/src/manifest/import/: mod.rs
crates/keel-core/src/resolver/: mod.rs
crates/keel-core/src/workspace/: mod.rs
crates/keel-core/tests/: import.rs  lock_and_change.rs  manifest.rs
crates/keel-forge/: Cargo.toml
crates/keel-forge/src/: github.rs  gitlab.rs  lib.rs  orchestrate.rs
crates/keel-forge/tests/: orchestrate.rs
crates/keel-git/: Cargo.toml
crates/keel-git/src/: lib.rs  parallel.rs
crates/keel-git/tests/: shellgit.rs
crates/keel-merge/: Cargo.toml
crates/keel-merge/src/: lib.rs
crates/keel-merge/tests/: merge.rs
crates/keel-tui/: Cargo.toml
crates/keel-tui/src/: lib.rs
demo/: .gitignore  cli-changeset.tape  cli-compose.tape  cli-merge.tape  cli-plugin.tape  cli-run-verify.tape  cli.tape  promo-build.tape  promo-test.tape  promo-tui.tape  setup.sh  tui.tape
docs/: ARCHITECTURE.md  CLI-DESIGN.md  COMMERCIALIZATION.md  COMPLIANCE.md  DISTRIBUTION.md  DOMAINS.md  EXAMPLES.md  EXTENDING.md  INSTALL.md  INTEGRATION.md  LAUNCH-POSTS.md  LAUNCH.md  PLUGIN-ECOSYSTEM.md  PLUGINS.md  PROD-VALIDATION.md  RELEASE-CHECKLIST.md  SUMMARY.md  book.toml  index.md
docs/assets/: i18n.js  learn.css
docs/learn/: 00-what-is-hawser.md  01-install-and-first-run.md  01-install.md  02-the-manifest.md  02-your-first-stack.md  03-sync-and-the-lockfile.md  03-the-daily-workflow.md  04-cross-repo-changesets.md  04-the-tui-cockpit.md  05-changesets-across-repos.md  05-the-tui-cockpit.md  06-build-test-and-verify.md  06-plugins-and-extending.md  07-going-to-production.md  08-build-a-plugin-mcp.md
docs/po/: fr.po  messages.pot
examples/: README.md
examples/automotive/: README.md  haw.toml
examples/automotive-pinned/: README.md  haw.toml  keel.toml
examples/devops-infra/: README.md  haw.toml
examples/embedded-bsp/: README.md  haw.toml  keel.toml
examples/embedded-real/: README.md  haw.toml
examples/governance/: README.md  haw.toml
examples/haw-hello/: README.md  haw-hello
examples/microservices/: README.md  haw.toml
examples/ml-ai/: README.md  haw.toml
examples/ml-platform/: README.md  haw.toml
examples/mobile/: README.md  haw.toml
examples/nvim/: README.md
examples/nvim/lua/haw/: init.lua
examples/nvim/plugin/: haw.lua
examples/plugins/haw-docker/: README.md  haw-docker
examples/plugins/haw-fleet-status/: README.md  haw-fleet-status
examples/plugins/haw-k8s/: README.md  haw-k8s
examples/plugins/haw-web/: README.md  haw-web
examples/quickstart/: README.md  haw.toml
landing/: app.js  index.html  robots.txt  sitemap.xml  styles.css
landing/fr/: index.html
packaging/: render.py
packaging/homebrew/: hawser.rb  keelson.rb
packaging/scoop/: hawser.json  keelson.json
promo/: launch-copy.md
promo/src/: Promo.tsx  theme.ts
promo/src/scenes/: Build.tsx  Cockpit.tsx  PluginNew.tsx  Plugins.tsx  RealClip.tsx  Test.tsx
site/: Cargo.toml  index.html
site/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
