[package]
name = "xtask"
description = "Release and packaging automation for Keelson"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true

[lints]
workspace = true
