[package]
name = "haw-git-gate"
description = "haw plugin: haw-git-gate (a pre-commit-style hygiene/secret gate)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
