[package]
name = "keel-forge"
description = "Keelson PR/MR orchestration behind the Forge trait (GitHub, GitLab)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
