[package]
name = "keel-tui"
description = "Keelson ratatui fleet dashboard (thin over keel-core)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keel-core.workspace = true
ratatui.workspace = true

[lints]
workspace = true
